# optee_hw_template

./: readme.md
codes/: readme.md
reports/: readme.md
starter_codes/: plot_ecdf_m1.py  readme.md
starter_codes/HW1_M2_SMA_AD_YOUR_WSU_ID/: Android.mk  CMakeLists.txt
starter_codes/HW1_M2_SMA_AD_YOUR_WSU_ID/host/: Makefile  main.c
starter_codes/HW1_M2_SMA_AD_YOUR_WSU_ID/ta/: Android.mk  HW1_M2_SMA_AD_YOUR_WSU_ID.c  Makefile  sub.mk  user_ta_header_defines.h
starter_codes/HW1_M2_SMA_AD_YOUR_WSU_ID/ta/include/: HW1_M2_SMA_AD_YOUR_WSU_ID_ta.h
